Remove deprecations (#228)